--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -2,7 +2,6 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   annotations:
-    # nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
   labels:
     app.kubernetes.io/managed-by: kargocd
@@ -15,6 +14,5 @@ spec:
           - backend:
               serviceName: frontend
               servicePort: 3000
-            # path: /k63ebdb037a8fa(/|$)(.*)
-            path: /k6d6d1b8e4034a
+            path: /k2e083f065c55a
             pathType: Prefix
